# bachelor-automata-theory

./: Cargo.toml  Justfile
apps/inspectify/: package-lock.json  package.json
apps/inspectify/src/lib/: api.ts
apps/inspectify/src/lib/components/: CompactLabelsInput.svelte  CopyMinimizerButton.svelte  Graphviz.svelte  Network.svelte  NetworkAutomata.svelte
apps/inspectify/src/lib/utils/: convertDotForMinimizer.ts  dotHandler.test.ts  dotHandler.ts
apps/inspectify/src/routes/(inspectify)/env/RegexToDfa/: +page.svelte
apps/inspectify/src/routes/(inspectify)/env/RegexToDfaDirect/: +page.svelte
crates/ce-shell/: Cargo.toml
crates/ce-shell/src/: lib.rs
crates/envs/ce-regex-to-dfa/: Cargo.toml
crates/envs/ce-regex-to-dfa-direct/: Cargo.toml
crates/envs/ce-regex-to-dfa-direct/src/: lib.rs
crates/envs/ce-regex-to-dfa/src/: lib.rs
crates/envs/ce-regex-to-enfa/: Cargo.toml
crates/envs/ce-regex-to-enfa/src/: lib.rs
crates/envs/ce-regex-to-nfa/: Cargo.toml
crates/envs/ce-regex-to-nfa/src/: lib.rs
crates/regex-to-automata/: Cargo.toml  proptest.toml
crates/regex-to-automata/src/: automaton.rs  dfa.rs  dot.rs  enfa_to_dfa.rs  epsilon_nfa.rs  epsilon_removal.rs  errors.rs  lib.rs  nfa.rs  nfa_to_dfa.rs  regex.rs
crates/regex-to-automata/tests/: EpsilonNfaTest.rs  IOTests.rs  dfa_test.rs  dfa_tests.rs  dot_tests.rs  language_preservation.rs  nfa_test.rs  nfa_to_dfa_test.rs  regex_tests.rs
crates/regex-to-automata/tests/common/: mod.rs
crates/xtask/src/: main.rs
md-files/: regex.md
(+2 files in other folders)
