[package]
name = "ce-regex-to-dfa"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ce-core.workspace = true
itertools.workspace = true
petgraph.workspace = true
rand.workspace = true
regex-syntax = "0.8.10"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tapi.workspace = true
tracing.workspace = true
